# ESMReader

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  LICENSE.md  README.md  annotated.html  annotated_dup.js  dir_1dce4342d7d9b8d40255b651910d9070.js  dir_2fd90de061448145728f665c16563ed4.js  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_6af6fa5292e1d14b0708f56f484e486d.html  dir_bfccd401955b95cf8c75461437045ac0.html  dir_f5c8de6f4b5d1fd8721600304f55ae53.html  dir_f5c8de6f4b5d1fd8721600304f55ae53.js  files.html  functions_func.html  hierarchy.html  index.html  pages.html
.github/docs/: doxyfile
.github/workflows/: build_and_test.yml  docs.yml
d0/dc6/: tes4record_8cpp_source.html
d2/daf/: class_base_record.html
d3/d93/: bufferstream_8cpp_source.html
d4/d03/: class_buffer_stream.html  class_buffer_stream.js
d4/d21/: class_string_sub_record.js
d4/d9c/: bufferstream_8h_source.html
d4/dfc/: class_buffer_stream-members.html
d5/d50/: class_base_sub_record.html  class_base_sub_record.js
d5/d64/: struct_record_header.js
d7/d96/: class_t_e_s4_record_1_1_h_e_d_r_sub_record-members.html
d8/d52/: class_e_s_m.html  class_e_s_m.js
d8/db3/: class_t_e_s4_record_1_1_h_e_d_r_sub_record.js
d9/d1f/: class_string_sub_record-members.html
d9/d49/: types_8h_source.html
d9/dfc/: esm_8h_source.html
db/d62/: class_e_s_m-members.html
dc/d54/: common_8h_source.html
dc/d8a/: struct_r_g_b_a.html  struct_r_g_b_a.js
dd/da0/: todo.html
html/: classes.html  dir_1dce4342d7d9b8d40255b651910d9070.html  dir_2fd90de061448145728f665c16563ed4.html  dir_6af6fa5292e1d14b0708f56f484e486d.js  dir_bfccd401955b95cf8c75461437045ac0.js  dir_cae09b95098d41a63add55b9983c5ce2.html  dir_cae09b95098d41a63add55b9983c5ce2.js  functions.html  functions_vars.html  hierarchy.js  navtreedata.js  navtreeindex0.js
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_5.js  all_6.js  all_8.js  all_9.js  all_a.js  classes_2.js  classes_3.js  classes_5.js  functions_0.js  pages_0.js  searchdata.js  variables_1.js  variables_4.js
src/: bufferstream.cpp  esm.cpp  group.cpp  utility.cpp
test/: f3_anchorage.cpp  fnv_honesthearts.cpp
(+42 files in other folders)
